[gd_scene load_steps=5 format=3 uid="uid://4lxmwuco6ksy"]

[ext_resource type="Script" path="res://scene/4/essence.gd" id="1_xnb4n"]
[ext_resource type="Texture2D" uid="uid://bpjg61xvkssqv" path="res://asset/png/element/element.png" id="2_e8p1b"]
[ext_resource type="Texture2D" uid="uid://8a0yr267fdhr" path="res://asset/png/digit/1_9.png" id="3_flkmi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0bm3"]
size = Vector2(64, 64)

[node name="Essence" type="Node2D"]
script = ExtResource("1_xnb4n")

[node name="Element" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_e8p1b")
hframes = 2
frame = 1

[node name="Value" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_flkmi")
hframes = 9

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(0.95, 0.95)
shape = SubResource("RectangleShape2D_m0bm3")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
